// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaspaceHeader should match snapshot (logged in) 1`] = `
<div class="sm-header h-24">
  <div class="fixed top-0 left-0 right-0">
    <div class="non-responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-center justify-between bg-primary">
      <div class="header-items"><a href="/" class="flex pl-3 pr-4 router-link-exact-active router-link-active"><img src="../../assets/logo.png" alt="Metaspace" title="Metaspace"></a> <a href="/upload" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
" id="upload-link">
          Upload
        </a> <a href="/annotations" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
" id="annotations-link">
          Annotations
        </a> <a href="/datasets" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
" id="datasets-link">
          Datasets
        </a> <a href="/projects" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Projects
        </a> <a href="/groups" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Groups
        </a></div>
      <div class="header-items"><a href="/detectability" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Detectability
        </a> <a href="/help" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Help
        </a>
        <!---->
        <div class="header-items mr-1 lg:mr-2">
          <div class="relative flex py-2"><a href="/user/me" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
" id="user-menu">
              <div class="limit-width">
                Test User
                <mock-el-tooltip content="currentUser.projects.1.project.name has a pending membership request." placement="bottom"><span class="notification"></span></mock-el-tooltip>
              </div>
            </a>
            <transition-stub enterclass="transform opacity-0 scale-95" leaveclass="transform opacity-100 scale-100" entertoclass="transform opacity-100 scale-100" leavetoclass="transform opacity-0 scale-95" enteractiveclass="transition ease-out duration-100" leaveactiveclass="transition ease-in duration-75">
              <!---->
            </transition-stub>
          </div>
        </div>
      </div>
    </div>
    <div class="responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-start justify-center
      bg-primary flex-wrap h-full">
      <div class="header-items flex-row w-full justify-between" style="height: 64px;"><a href="/" class="flex pl-3 pr-4 router-link-exact-active router-link-active"><img src="../../assets/logo.png" alt="Metaspace" title="Metaspace"></a> <button slot="reference" class=" button-reset flex h-12 w-12 mr-3"><svg data-icon="icon-menu" class="h-full w-full sm-menu-icon"></svg></button></div>
      <!---->
    </div>
    <div class="transition-colors duration-300 ease-in-out text-white el-row bg-blue-700">
      <transition-stub name="el-alert-fade" class="h-8 rounded-none justify-center z-0">
        <div role="alert" class="el-alert el-alert--info is-light"><i class="el-alert__icon el-icon-info"></i>
          <div class="el-alert__content"><span class="el-alert__title">systemHealth.message</span>
            <!---->
            <!----><i class="el-alert__closebtn el-icon-close" style="display: none;"></i></div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`MetaspaceHeader should match snapshot (logged out) 1`] = `
<div class="sm-header h-24">
  <div class="fixed top-0 left-0 right-0">
    <div class="non-responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-center justify-between bg-primary">
      <div class="header-items"><a href="/" class="flex pl-3 pr-4 router-link-exact-active router-link-active"><img src="../../assets/logo.png" alt="Metaspace" title="Metaspace"></a> <a href="/upload" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
" id="upload-link">
          Upload
        </a> <a href="/annotations" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
" id="annotations-link">
          Annotations
        </a> <a href="/datasets" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
" id="datasets-link">
          Datasets
        </a> <a href="/projects" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Projects
        </a> <a href="/groups" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Groups
        </a></div>
      <div class="header-items"><a href="/detectability" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Detectability
        </a> <a href="/help" class="
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
          Help
        </a>
        <div class="header-items mr-1 lg:mr-2"><button class="button-reset 
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
            Create account
          </button> <button class="button-reset 
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  hover:bg-blue-700 focus:outline-none focus:bg-blue-700
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent
">
            Sign in
          </button></div>
        <!---->
      </div>
    </div>
    <div class="responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-start justify-center
      bg-primary flex-wrap h-full">
      <div class="header-items flex-row w-full justify-between" style="height: 64px;"><a href="/" class="flex pl-3 pr-4 router-link-exact-active router-link-active"><img src="../../assets/logo.png" alt="Metaspace" title="Metaspace"></a> <button slot="reference" class=" button-reset flex h-12 w-12 mr-3"><svg data-icon="icon-menu" class="h-full w-full sm-menu-icon"></svg></button></div>
      <!---->
    </div>
    <div class="transition-colors duration-300 ease-in-out text-white el-row bg-blue-700">
      <transition-stub name="el-alert-fade" class="h-8 rounded-none justify-center z-0">
        <div role="alert" class="el-alert el-alert--info is-light"><i class="el-alert__icon el-icon-info"></i>
          <div class="el-alert__content"><span class="el-alert__title">systemHealth.message</span>
            <!---->
            <!----><i class="el-alert__closebtn el-icon-close" style="display: none;"></i></div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
